--- a/style_certificates.css
+++ b/style_certificates.css
@@ -3,7 +3,7 @@
 #indexTopBar {
     padding: 10px 0 10px 1rem;
     color: #FFFFFF;
-    background-color: #4EB16B;
+    background-color: #23AD00;
 
     /* progressive enhancement */
 	-moz-border-radius: 14px 0 0 14px;
@@ -30,7 +30,7 @@
     font-size: 18px;
 }
 
-#portfolioPhoto {
+#awardsPhoto {
     margin-bottom: 1rem;
 
     /* progressive enhancement */
@@ -43,52 +43,6 @@
 #portfolioCardUI .row {
     max-width: 1200px;
 
-}
-
-#mainProjectImage {
-    max-width: 100%;
-    height: 410px; 
-    -moz-border-radius: 14px 0 0 14px;
-	-o-border-radius: 14px 0 0 14px;
-	-webkit-border-radius: 14px 0 0 14px;
-	border-radius: 14px 0 0 14px; /* CSS3 rule */
-}
-
-#portfolioCardUI #mainProject {
-    background-color: #B941E8;
-    height: 410px;
-    width: 100%;
-
-    margin-bottom: 0;
-
-    /* progressive enhancement */
-	-moz-border-radius: 0 14px 14px 0;
-	-o-border-radius: 0 14px 14px 0;
-	-webkit-border-radius: 0 14px 14px 0;
-	border-radius: 0 14px 14px 0; /* CSS3 rule */
-}
-
-#portfolioCardUI article #mainSubjectHeader {
-    margin: 0;
-    margin-top: 3px;
-    padding: 10px 0 0 10px;
-    font-size: 28px;
-    color: #54F059;
-}
-
-#mainProjectName {
-    margin-top: 10px;
-    padding: 0 0 0 10px;
-    font-size: 30px;
-}
-
-#mainColumn2 #mainProjectDescription {
-    padding: 5px 20px 15px 10px;
-    font-size: 18px;
-}
-
-#allWorkHeader {
-    color: #FFFFFF;
 }
 
 #portfolioCardUI article {
@@ -153,35 +107,9 @@
     text-decoration: underline;
 }
 
-
-
-#mainClickToView {
-    margin-top: 145px;
-    padding-left: 10px;
-    font-size: 26px;
-    display: none;
-
-    text-decoration: underline;
-}
-
-#mainProjectDiv:hover {
-    cursor: pointer;
-}
-
-#mainProjectDiv:hover #mainProject{
-    background-color: #7700B3;
-    transition: 0.25s;
-}
-
-#mainProjectDiv:hover #mainClickToView{
-    display: block;
-    transition: 0.25s;
-}
-
 #portfolioCardUI article:hover {
     background-color: #CC3CC3;
     transition: 0.25s;
-    cursor: pointer;
 }
   
 #portfolioCardUI article:hover .projectPicture {
@@ -262,14 +190,6 @@ footer p {
     display: flex;
 }
 
-.col-80 {
-    width: 80%;
-}
-
-.col-75 {
-    width: 75%;
-}
-
 .col-70 {
     width: 70%;
 }
@@ -296,8 +216,4 @@ footer p {
 
 .col-25 {
     width: 25%;
-}
-
-.col-20 {
-    width: 20%;
 }
