--- a/style_goals.css
+++ b/style_goals.css
@@ -1,11 +1,9 @@
 @charset "UTF-8";
 
-
-
 #indexTopBar {
     padding: 10px 0 10px 1rem;
     color: #FFFFFF;
-    background-color: #B402E6;
+    background-color: #DB57FF;
 
     /* progressive enhancement */
 	-moz-border-radius: 14px 0 0 14px;
@@ -16,16 +14,16 @@
     
 }
 
+#goalsPhoto {
+    -moz-border-radius: 0 14px 14px 14px;
+	-o-border-radius: 0 14px 14px 14px;
+	-webkit-border-radius: 0 14px 14px 14px;
+	border-radius: 0 14px 14px 14px; /* CSS3 rule */
+}
+
 #indexTopBar h1 {
     margin: 0;
     font-size: 50px;
-}
-
-#aboutMe {
-    padding: 0 1rem;
-    color: #FFFFFF;
-
-    font-size: 18px;
 }
 
 #indexTopBar p {
@@ -33,77 +31,11 @@
     font-size: 18px;
 }
 
-#homePhoto {
-    margin-bottom: 1rem;
-
-    /* progressive enhancement */
-	-moz-border-radius: 0 14px 14px 14px;
-	-o-border-radius: 0 14px 14px 14px;
-	-webkit-border-radius: 0 14px 14px 14px;
-	border-radius: 0 14px 14px 14px; /* CSS3 rule */
-}
-
-#recentUpdates .row {
-    max-width: 1200px;
-
-}
-
-#recentUpdates {
-    padding: 1px 0 1px 1rem;
-    background-color: #68DE8B;
-    overflow: hidden;
-
-    /* progressive enhancement */
-	-moz-border-radius: 14px;
-	-o-border-radius: 14px;
-	-webkit-border-radius: 14px;
-	border-radius: 14px; /* CSS3 rule */
-
-    color: #FFFFFF;
-
-    clear: both;
-}
-
-#recentHeader {
-    font-size: 30px;
-    color: #8109b0;
-
-    font-weight: bold;
-}
-
-#recentUpdates #topMargin {
-    margin-top: 21.580px;
-}
-
-#recentUpdates #bottomMargin {
-   margin-bottom: 21.580px;
-}
-
 .pfp {
     padding: 0;
     display: flex;
     list-style: none;
     align-items: center;
-}
-
-#recentUpdates h3, p {
-    margin: 1rem 0
-}
-
-#recentUpdates h3, h2 {
-    font-size: 24px;
-}
-
-#recentUpdates p, h4 {
-    font-size: 18px;
-}
-
-textarea {
-    resize: none;
-
-    font-family: 'Inter', sans-serif;
-
-    height: 130px;
 }
 
 footer {
@@ -157,11 +89,6 @@ footer p {
 }
 
 .row {
-    width: 100%;
-    display: flex;
-}
-
-.nestedRow {
     width: 100%;
     display: flex;
 }
