Few visual bugs.

--- a/style_resume.css
+++ b/style_resume.css
@@ -3,7 +3,7 @@
 #indexTopBar {
     padding: 10px 0 10px 1rem;
     color: #FFFFFF;
-    background-color: #BD47FF;
+    background-color: rgb(180, 2, 230);
     display: block;
     width: 100%;
 
