--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html {
 }
 
 body {
+    height: 100%;
     margin: 0;
     padding: 0;
 
@@ -79,18 +80,7 @@ header #topHR {
     min-height: 3rem;
     background: none;
     padding: 0;
-    margin-top: 1rem;
-
-    display:flex;
-    align-items: center;
-}
-
-.header-nav {
-    width: 100%;
-    min-height: 3rem;
-    background: none;
-    padding: 0;
-    margin-top: 1rem;
+    padding-top: 1rem;
 
     display:flex;
     align-items: center;
