--- a/style_index.css
+++ b/style_index.css
@@ -25,7 +25,7 @@
     padding: 0 1rem;
     color: #FFFFFF;
 
-    font-size: 18px;
+    font-size: 20px;
 }
 
 #indexTopBar p {
@@ -86,24 +86,18 @@
     align-items: center;
 }
 
-#recentUpdates h3, p {
-    margin: 1rem 0
+#recentPhoto {
+    width: 281px;
+    height: 482px;
+
+    margin-left: 170px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-#recentUpdates h3, h2 {
-    font-size: 24px;
-}
-
-#recentUpdates p, h4 {
-    font-size: 18px;
-}
-
-textarea {
-    resize: none;
-
-    font-family: 'Inter', sans-serif;
-
-    height: 130px;
+#recentBody {
+    color: #000000;
+    font-size: 20px;
 }
 
 footer {
@@ -166,6 +160,10 @@ footer p {
     display: flex;
 }
 
+.col-75 {
+    width: 75%;
+}
+
 .col-70 {
     width: 70%;
 }
@@ -192,4 +190,8 @@ footer p {
 
 .col-25 {
     width: 25%;
+}
+
+.col-20 {
+    width: 20%;
 }
