--- a/style.css
+++ b/style.css
@@ -75,6 +75,16 @@ header #topHR {
     transition: 0.15s;
 }
 
+#GitHub {
+    margin-right: 20px;
+    filter: invert(100%);
+}
+
+#GitHub:hover {
+    filter: none;
+    transition: 0.15s;
+}
+
 .header-nav {
     width: 100%;
     min-height: 3rem;
@@ -106,7 +116,6 @@ header #topHR {
 
 .nav-menu {
     margin-left: auto;
-
     display: flex;
     list-style: none;
     align-items: center;
@@ -114,8 +123,67 @@ header #topHR {
 
 .nav-menu li {
     padding-left: 1rem;
+    display: flex;
+    align-items: center;
 }
 
 .header-nav h1{
     margin: 0;
+}
+
+.pfp {
+    padding: 0;
+    display: flex;
+    list-style: none;
+    align-items: center;
+}
+
+footer {
+    margin-top: 60px;
+    background-color: #000000;
+}
+
+#footerRow {
+    width: 1200px;
+
+    color: #FFFFFF;
+
+    margin: 0 auto;
+}
+
+.footer-site-nav h4, .footer-social-nav h4 {
+    margin: 0.5rem 0;
+}
+
+#footerRow a {
+    color: #FFFFFF;
+    margin-top: auto;
+
+    font-size: 16px;
+
+    text-decoration: none;
+    font-weight: normal;
+}
+
+#footerRow a:hover {
+    text-decoration: underline;
+}
+
+#copyright {
+    margin: 0;
+    padding: 25px 0 10px 0;
+
+    color: #FFFFFF;
+    
+    font-size: 12px;
+    font-weight: normal;
+}
+
+footer p {
+    color: #FFFFFF;
+    font-size: 16px;
+}
+
+#footerMail {
+    text-decoration: underline;
 }
